--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   mariadb:
     image: docker.io/bitnami/mariadb:10.6
     environment:
+      # TODO: Bouild a image for a laravel aplication
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
       - ALLOW_EMPTY_PASSWORD=yes
       - MARIADB_USER=${DB_USERNAME}
