--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0 || ^8.2",
+        "faisal50x/blade-ionicons": "^0.0.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "mallardduck/blade-boxicons": "^2.4",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/flysystem-dropbox": "*"
     },
     "require-dev": {
